--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,4 +49,8 @@
         <item name="android:textColor">@color/red</item>
     </style>
 
+    <style name="SoftLeftPadding">
+        <item name="android:paddingLeft">3dp</item>
+    </style>
+
 </resources>
