working user profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -148,8 +148,8 @@
             </LinearLayout>
         </LinearLayout>
 
-        <include
-            layout="@layout/fragment_home"
+        <FrameLayout
+            android:id="@+id/profile_tweetsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/profile_llDescription" />
