--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/toolbar_btnHome"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentStart="true"
@@ -31,6 +32,7 @@
             android:src="@drawable/ic_twitter_logo_white" />
 
         <ImageView
+            android:id="@+id/toolbar_btnUserProfile"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentEnd="true"
