rounded image views

--- a/app/src/main/res/layout/activity_tweet_timeline.xml
+++ b/app/src/main/res/layout/activity_tweet_timeline.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/ivTweeter"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        style="@style/UserImage"
         />
 
     <LinearLayout
