--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -15,16 +16,11 @@
         android:layout_height="match_parent">
 
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/profile_ivUserImage"
-            android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher" />
+            android:layout_width="75dp"
+            style="@style/UserImage"/>
 
         <LinearLayout
             android:id="@+id/profile_llUserInfo"
