--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,17 @@
         <item name="android:paddingLeft">3dp</item>
     </style>
 
+    <style name="CounterLabels" parent="SoftLeftPadding">
+       <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="Counters">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="UserImage">
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_alignParentStart">true</item>
